organização de scripts

--- a/paginas/editPerfil.html
+++ b/paginas/editPerfil.html
@@ -63,139 +63,8 @@
     </div>
   </div>
 
-  <script>
-    // Firebase Config
-    const firebaseConfig = {
-      apiKey: "AIzaSyAbVJUTwovjKHua6OWP_yIncKYytEEwPfo",
-      authDomain: "tcc-994f7.firebaseapp.com",
-      projectId: "tcc-994f7",
-      storageBucket: "tcc-994f7.firebasestorage.app",
-      messagingSenderId: "848443566233",
-      appId: "1:848443566233:web:b9be3b2beccb027fa53008",
-      measurementId: "G-SGB2LYMT17"
-    };
-
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-    const db = firebase.firestore();
-
-    const form = document.getElementById('dadosForm');
-    const descricaoObjetivo = document.getElementById('descricaoObjetivo');
-    const objetivoSelect = document.getElementById('objetivo');
-
-    // Descrições dos objetivos
-    const descricoes = {
-      "Resistência": "Resistência: Focado em aumentar a capacidade muscular e cardiovascular, melhorando a resistência física geral.",
-      "Força": "Força: Voltado para o ganho de força e potência muscular, com exercícios de alta intensidade e carga progressiva.",
-      "Crescimento": "Crescimento: Indicado para quem busca hipertrofia e aumento do volume muscular.",
-      "Funcional": "Funcional: Trabalha movimentos naturais do corpo, melhorando equilíbrio, coordenação e estabilidade.",
-      "Aeróbico": "Ideal: Ideal para quem deseja melhorar o condicionamento físico e queimar gordura corporal.",
-      "Mobilidade": "Mobilidade: Ajuda a aumentar a amplitude dos movimentos, flexibilidade e prevenir lesões."
-    };
-
-    objetivoSelect.addEventListener('change', () => {
-      descricaoObjetivo.textContent = descricoes[objetivoSelect.value] || "";
-    });
-
-    // Verifica autenticação e carrega dados existentes
-    auth.onAuthStateChanged(user => {
-      if (user) {
-        const userRef = db.collection('usuarios').doc(user.uid);
-
-        userRef.get().then(doc => {
-          if (doc.exists) {
-            const dados = doc.data();
-            document.getElementById('userName').textContent = "Nome do usuário: " + (user.displayName || "Sem nome");
-
-            // Preenche os campos do formulário
-            document.getElementById('cadNome').value = user.displayName || "";
-            document.getElementById('altura').value = dados.altura || "";
-            document.getElementById('peso').value = dados.peso || "";
-            document.getElementById('idade').value = dados.idade || "";
-            document.getElementById('objetivo').value = dados.objetivo || "";
-            descricaoObjetivo.textContent = descricoes[dados.objetivo] || "";
-            document.getElementById('genero').value = dados.genero || "";
-          }
-        }).catch(err => console.error(err));
-      } else {
-        window.location.href = 'login.html';
-      }
-    });
-
-    // Salvar dados usando update() para não apagar equipamentos
-    form.addEventListener('submit', (e) => {
-  e.preventDefault();
-
-  const cadNome = document.getElementById('cadNome').value.trim();
-  const altura = document.getElementById('altura').value ? Number(document.getElementById('altura').value) : null;
-  const peso = document.getElementById('peso').value ? Number(document.getElementById('peso').value) : null;
-  const idade = document.getElementById('idade').value ? Number(document.getElementById('idade').value) : null;
-  const objetivo = document.getElementById('objetivo').value;
-  const genero = document.getElementById('genero').value;
-
-  // Validação simples (exemplo)
-  if (!cadNome) {
-    showCustomAlert('Informe o nome antes de salvar.');
-    return;
-  }
-
-  const user = auth.currentUser;
-  if (!user) {
-    showCustomAlert('Usuário não autenticado.');
-    return;
-  }
-
-  const userRef = db.collection('usuarios').doc(user.uid);
-
-  // Primeiro atualiza o Firestore
-  userRef.update({
-    cadNome,
-    altura,
-    peso,
-    idade,
-    objetivo,
-    genero
-  })
-  .then(() => {
-    // Depois atualiza o displayName no Auth (isso faz o user.displayName mudar)
-    return user.updateProfile({ displayName: cadNome });
-  })
-  .then(() => {
-    // Atualiza o DOM imediatamente (sem recarregar)
-    document.getElementById('userName').textContent = "Nome do usuário: " + (auth.currentUser.displayName || cadNome);
-
-    showCustomAlert('Dados salvos com sucesso!', () => {
-      window.location.href = 'perfil.html';
-    });
-  })
-  .catch(err => {
-    console.error('Erro ao salvar/atualizar:', err);
-    showCustomAlert('Erro ao salvar dados. Veja o console para mais detalhes.');
-  });
-});
-
-
-  
-
-    // Modal personalizado
-    let customAlertCallback = null;
-
-    function showCustomAlert(message, callback = null) {
-      const modal = document.getElementById('customAlert');
-      const messageElement = document.getElementById('customAlertMessage');
-      messageElement.textContent = message;
-      modal.style.display = 'flex';
-      customAlertCallback = callback;
-    }
-
-    function closeCustomAlert() {
-      const modal = document.getElementById('customAlert');
-      modal.style.display = 'none';
-      if (typeof customAlertCallback === 'function') {
-        customAlertCallback();
-        customAlertCallback = null;
-      }
-    }
+  <script src="scripts/editPerfil.js">
+   
   </script>
 </body>
 
