--- a/paginas/treinos.html
+++ b/paginas/treinos.html
@@ -41,371 +41,8 @@
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
-  <script>
-    // ================================
-    // 🔹 FIREBASE CONFIG
-    // ================================
-    const firebaseConfig = {
-      apiKey: "AIzaSyAbVJUTwovjKHua6OWP_yIncKYytEEwPfo",
-      authDomain: "tcc-994f7.firebaseapp.com",
-      projectId: "tcc-994f7",
-      storageBucket: "tcc-994f7.appspot.com",
-      messagingSenderId: "848443566233",
-      appId: "1:848443566233:web:b9be3b2beccb027fa53008"
-    };
+ 
+  <script src="scripts/treinos.js"></script>
 
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-    const db = firebase.firestore();
-
-    // ================================
-    // 🔹 VARIÁVEIS GLOBAIS
-    // ================================
-    let usuario = null;
-    let equipamentosUsuario = [];
-    let objetivoUsuario = "";
-
-    const treinoElem = document.getElementById("treinoDoDia");
-    const btnProximo = document.getElementById("btnProximo");
-    const container = document.getElementById("exerciciosContainer");
-
-    const mapaTreinos = {
-      "Peito e Triceps": ["peito", "triceps"],
-      "Costas e Biceps": ["costas", "biceps"],
-      "Pernas e Ombros": ["pernas", "ombros"]
-    };
-
-    // ================================
-    // 🔹 EXERCÍCIOS (resumidos)
-    // ================================
-    const exercicios = {
-  pernas: [
-    { equipamento: "Halteres", exercicio: "Agachamento leve", foco: ["Resistência", "Funcional"] },
-    { equipamento: "Halteres", exercicio: "Passada (avanço)", foco: ["Crescimento", "Força"] },
-    { equipamento: "Barra", exercicio: "Agachamento livre pesado", foco: ["Força", "Crescimento"] },
-    { equipamento: "Kettlebell", exercicio: "Goblet squat", foco: ["Funcional", "Mobilidade"] },
-    { equipamento: "Elástico", exercicio: "Agachamento com elástico", foco: ["Mobilidade", "Resistência"] },
-    { equipamento: "Esteira", exercicio: "Caminhada inclinada", foco: ["Aeróbico", "Resistência"] },
-    
-    { equipamento: "Esteira", exercicio: "Corrida leve", foco: ["Aeróbico", "Resistência"] },
-    { equipamento: "Corda", exercicio: "Saltos simples", foco: ["Coordenação", "Resistência"] },
-    { equipamento: "Corda", exercicio: "Double unders", foco: ["Coordenação", ] },
-    { equipamento: "Corpo", exercicio: "Pistol squat", foco: ["Força", , "Equilíbrio"] },
-    { equipamento: "Corda naval", exercicio: "Ondas com agachamento", foco: ["Força", , "Resistência"] },
-    { equipamento: "Barra", exercicio: "Stiff", foco: ["Crescimento", "Força"] },
-    { equipamento: "Halteres", exercicio: "Afundo búlgaro", foco: ["Força", "Equilíbrio"] },
-    { equipamento: "Kettlebell", exercicio: "Deadlift unilateral", foco: ["Funcional", "Mobilidade", "Força"] },
-    { equipamento: "Corpo", exercicio: "Ponte de glúteo", foco: ["Resistência", "Crescimento"] },
-    { equipamento: "Elástico", exercicio: "Cadeira extensora com elástico", foco: ["Mobilidade", "Resistência"] },
-    { equipamento: "Corda naval", exercicio: "Saltos laterais com corda", foco: ["Aeróbico", ] },
-    { equipamento: "Halteres", exercicio: "Agachamento sumô", foco: ["Força", "Crescimento"] },
-    { equipamento: "Kettlebell", exercicio: "Swing", foco: [, "Funcional"] },
-    { equipamento: "Corpo", exercicio: "Subida no banco", foco: ["Resistência", "Força"] }
-  ],
-
-  ombros: [
-    { equipamento: "Halteres", exercicio: "Elevação lateral sentada", foco: ["Resistência", "Crescimento"] },
-    { equipamento: "Halteres", exercicio: "Desenvolvimento militar", foco: ["Crescimento", "Força"] },
-    { equipamento: "Barra", exercicio: "Desenvolvimento em pé", foco: ["Força", "Crescimento"] },
-    { equipamento: "Elástico", exercicio: "Elevação frontal", foco: ["Mobilidade", "Resistência"] },
-    { equipamento: "Kettlebell", exercicio: "Press alternado", foco: ["Funcional", "Força"] },
-    { equipamento: "Kettlebell", exercicio: "Turkish get-up", foco: ["Mobilidade", , "Funcional"] },
-    { equipamento: "Corpo", exercicio: "Pike push-up", foco: ["Força", "Resistência"] },
-    { equipamento: "Corpo", exercicio: "Handstand push-up", foco: ["Força", , ] },
-    { equipamento: "Corda naval", exercicio: "Golpes laterais", foco: ["Funcional", "Resistência"] },
-    { equipamento: "Halteres", exercicio: "Elevação posterior", foco: ["Crescimento", ] },
-    { equipamento: "Barra", exercicio: "Push press", foco: ["Força", ] },
-    { equipamento: "Elástico", exercicio: "Rotação externa", foco: ["Mobilidade", ] },
-    { equipamento: "Corpo", exercicio: "Planche lean", foco: [, "Força"] },
-    { equipamento: "Corda naval", exercicio: "Golpes diagonais", foco: ["Funcional", ] },
-    { equipamento: "Halteres", exercicio: "Arnold press", foco: ["Força", "Crescimento"] },
-    { equipamento: "Kettlebell", exercicio: "Clean and press", foco: [, "Funcional"] },
-    { equipamento: "Corpo", exercicio: "Dive bomber push-up", foco: [, "Força"] },
-    { equipamento: "Elástico", exercicio: "Face pull com elástico", foco: ["Mobilidade", ] }
-  ],
-
-  costas: [
-    { equipamento: "Halteres", exercicio: "Remada unilateral apoiada", foco: ["Crescimento", "Força"] },
-    { equipamento: "Halteres", exercicio: "Remada curvada", foco: ["Força", "Crescimento"] },
-    { equipamento: "Barra", exercicio: "Barra fixa pronada", foco: ["Força", "Resistência"] },
-    { equipamento: "Elástico", exercicio: "Remada sentada", foco: ["Resistência", "Mobilidade"] },
-    { equipamento: "Elástico", exercicio: "Puxada alta", foco: ["Funcional", "Mobilidade"] },
-    { equipamento: "Kettlebell", exercicio: "Remada com kettlebell", foco: ["Funcional", "Força"] },
-    { equipamento: "Corpo", exercicio: "Muscle-up", foco: ["Força", , ] },
-    { equipamento: "Corda naval", exercicio: "Ondas alternadas", foco: ["Resistência", "Força"] },
-    { equipamento: "Barra", exercicio: "Levantamento terra", foco: ["Força", "Crescimento", ] },
-    { equipamento: "Halteres", exercicio: "Pullover", foco: ["Crescimento", "Resistência"] },
-    { equipamento: "Elástico", exercicio: "Face pull", foco: ["Mobilidade", ] },
-    { equipamento: "Corpo", exercicio: "Superman", foco: ["Resistência", "Mobilidade"] },
-    { equipamento: "Kettlebell", exercicio: "High pull", foco: ["Funcional", ] },
-    { equipamento: "Halteres", exercicio: "Remada invertida", foco: ["Força", ] },
-    { equipamento: "Corpo", exercicio: "Prancha com puxada", foco: ["Resistência", ] },
-    { equipamento: "Corda naval", exercicio: "Ondas laterais", foco: [, "Funcional"] },
-    { equipamento: "Corpo", exercicio: "Superman", foco: [, "Força, Crescimento"] }
-  ],
-
-  peito: [
-    { equipamento: "Halteres", exercicio: "Supino reto leve", foco: ["Crescimento", "Força"] },
-    { equipamento: "Halteres", exercicio: "Supino inclinado", foco: ["Força", "Crescimento"] },
-    { equipamento: "Barra", exercicio: "Supino pesado", foco: ["Crescimento", "Força", ] },
-    { equipamento: "Elástico", exercicio: "Crucifixo com elástico", foco: ["Mobilidade", ] },
-    { equipamento: "Kettlebell", exercicio: "Supino no chão", foco: ["Funcional", "Força"] },
-    { equipamento: "Corpo", exercicio: "Flexão inclinada", foco: ["Resistência", "Funcional"] },
-    { equipamento: "Corpo", exercicio: "Flexão tradicional", foco: ["Força", "Crescimento"] },
-    { equipamento: "Corpo", exercicio: "Flexão com palmas", foco: [, "Coordenação"] },
-    { equipamento: "Corda naval", exercicio: "Golpes cruzados", foco: ["Funcional", "Resistência"] },
-    { equipamento: "Halteres", exercicio: "Crucifixo reto", foco: ["Crescimento", ] },
-    { equipamento: "Barra", exercicio: "Supino declinado", foco: ["Força", "Crescimento"] },
-    { equipamento: "Elástico", exercicio: "Press de peito", foco: ["Resistência", "Mobilidade"] },
-    { equipamento: "Corpo", exercicio: "Flexão arqueada", foco: ["Mobilidade", ] },
-    { equipamento: "Kettlebell", exercicio: "Floor press", foco: ["Funcional", "Força"] },
-    { equipamento: "Corpo", exercicio: "Flexão diamante", foco: [, "Força"] },
-    { equipamento: "Halteres", exercicio: "Pullover com halteres", foco: ["Mobilidade", "Crescimento"] },
-    { equipamento: "Corda", exercicio: "Saltos explosivos", foco: ["Aeróbico", ] }
-  ],
-
-  biceps: [
-    { equipamento: "Halteres", exercicio: "Rosca alternada", foco: ["Resistência", "Crescimento"] },
-    { equipamento: "Halteres", exercicio: "Rosca martelo", foco: ["Crescimento", "Força"] },
-    { equipamento: "Barra", exercicio: "Rosca direta pesada", foco: ["Força", "Crescimento"] },
-    { equipamento: "Elástico", exercicio: "Rosca com elástico", foco: ["Mobilidade", "Resistência"] },
-    { equipamento: "Kettlebell", exercicio: "Rosca neutra", foco: ["Funcional", "Força"] },
-    { equipamento: "Corpo", exercicio: "Chin-up", foco: ["Crescimento", "Força"] },
-    { equipamento: "Halteres", exercicio: "Rosca concentrada", foco: ["Crescimento", ] },
-    { equipamento: "Barra", exercicio: "Rosca 21", foco: ["Resistência", "Crescimento"] },
-    { equipamento: "Elástico", exercicio: "Rosca inversa", foco: ["Mobilidade", "Resistência"] },
-    { equipamento: "Kettlebell", exercicio: "Rosca unilateral", foco: ["Funcional", "Resistência"] },
-    { equipamento: "Corpo", exercicio: "Isometria de bíceps", foco: ["Força", ] },
-    { equipamento: "Halteres", exercicio: "Rosca inclinada", foco: ["Crescimento", ] }
-  ],
-
-  triceps: [
-    { equipamento: "Halteres", exercicio: "Coice de tríceps", foco: ["Resistência", ] },
-    { equipamento: "Halteres", exercicio: "Tríceps francês", foco: ["Crescimento", "Força"] },
-    { equipamento: "Barra", exercicio: "Tríceps testa", foco: ["Força", "Crescimento"] },
-    { equipamento: "Elástico", exercicio: "Extensão com elástico", foco: ["Mobilidade", "Resistência"] },
-    { equipamento: "Kettlebell", exercicio: "Extensão acima da cabeça", foco: ["Funcional", "Força"] },
-    { equipamento: "Corpo", exercicio: "Paralelas (dips)", foco: ["Força", "Crescimento", ] },
-    { equipamento: "Corda naval", exercicio: "Ondas curtas", foco: ["Resistência", ] },
-    { equipamento: "Halteres", exercicio: "Kickback unilateral", foco: ["Resistência", ] },
-    { equipamento: "Barra", exercicio: "Fechamento de supino", foco: ["Força", "Crescimento"] },
-    { equipamento: "Corpo", exercicio: "Flexão diamante", foco: ["Crescimento", "Resistência"] },
-    { equipamento: "Elástico", exercicio: "Tríceps pull-down", foco: ["Resistência", "Mobilidade"] },
-    { equipamento: "Corpo", exercicio: "Extensão em banco", foco: ["Força", ] },
-    { equipamento: "Kettlebell", exercicio: "Tríceps kickback com kettlebell", foco: ["Funcional", "Força"] }
-  ]
-};
-
-
-    // ================================
-    // 🔹 CALCULAR SÉRIES E REPETIÇÕES
-    // ================================
-  function calcularTreino(usuario, foco) {
-  const { idade, peso, sexo, objetivo } = usuario;
-  let series = 3, repeticoes = 10; // padrão 3x10
-
-  // Ajuste por idade (apenas se não for força)
-  if (objetivo !== "Força") {
-    if (idade < 20) repeticoes += 2;
-    if (idade > 40) repeticoes -= 2;
-  }
-
-  // Ajuste por peso (apenas se não for força)
-  if (objetivo !== "Força") {
-    if (peso > 85) series += 1;
-    if (peso < 60) repeticoes += 2;
-  }
-
-  // Ajuste por sexo (apenas se não for força)
-  if (objetivo !== "Força") {
-    if (sexo === "masculino") series += 1;
-    else repeticoes += 2;
-  }
-
-  // Ajuste pelo objetivo principal
-  switch (objetivo) {
-    case "Força":
-      series = 2;        // sempre 3 séries
-      repeticoes -= 2;   // menos repetições
-      break;
-    case "Crescimento":
-      series += 1;       
-      repeticoes = 10;   
-      break;
-    case "Resistência":
-      repeticoes += 6;   
-      break;
-    case "Funcional":
-      repeticoes += 2;   
-      break;
-    case "Mobilidade":
-      series -= 1;       
-      repeticoes += 6;
-      break;
-    case "Aeróbico":
-      series -= 1;
-      repeticoes += 8;
-      break;
-  }
-
-  // Ajuste pelo foco do exercício
-  if (foco.includes(objetivo)) {
-    if (objetivo === "Força" || objetivo === "Crescimento") series += 1;
-    if (objetivo === "Resistência" || objetivo === "Aeróbico") repeticoes += 2;
-  }
-
-  // Limites finais
-  series = Math.max(2, Math.min(series, 6));
-  repeticoes = Math.max(4, Math.min(repeticoes, 20));
-
-  return { series, repeticoes };
-}
-
-    // ================================
-    // 🔹 AUTENTICAÇÃO
-    // ================================
-    auth.onAuthStateChanged(async (user) => {
-      if (!user) {
-        treinoElem.textContent = "Faça login para ver seus treinos.";
-        return;
-      }
-
-      const doc = await db.collection("usuarios").doc(user.uid).get();
-      if (!doc.exists) {
-        treinoElem.textContent = "Usuário não encontrado.";
-        return;
-      }
-
-      usuario = doc.data();
-      equipamentosUsuario = usuario.equipamentos || [];
-      objetivoUsuario = usuario.objetivo || "";
-
-      treinoElem.textContent = `Clique no botão para ver seu treino do dia (objetivo: ${objetivoUsuario}).`;
-      btnProximo.disabled = false;
-    });
-
-    // ================================
-    // 🔹 MOSTRAR EXERCÍCIOS
-    // ================================
-    btnProximo.addEventListener("click", () => {
-      const treinos = Object.keys(mapaTreinos);
-      const ultimo = localStorage.getItem("ultimoTreino");
-      let proximo = treinos[0];
-
-      if (ultimo && treinos.includes(ultimo)) {
-        const idx = treinos.indexOf(ultimo);
-        proximo = treinos[(idx + 1) % treinos.length];
-      }
-
-      localStorage.setItem("ultimoTreino", proximo);
-      treinoElem.textContent = `Treino do dia: ${proximo} (${objetivoUsuario})`;
-      mostrarExercicios(proximo);
-    });
-
-    function mostrarExercicios(treinoDoDia) {
-  container.innerHTML = "";
-  const grupos = mapaTreinos[treinoDoDia];
-  let encontrados = 0;
-
-  grupos.forEach(grupo => {
-    // Filtra os exercícios compatíveis com o objetivo e equipamentos
-    const lista = exercicios[grupo].filter(ex =>
-      equipamentosUsuario.includes(ex.equipamento) &&
-      ex.foco.includes(objetivoUsuario)
-    );
-
-    // Se não achar suficientes, pega qualquer exercício do grupo
-    const listaFinal = lista.length > 0 ? lista : exercicios[grupo];
-
-    // 🔹 Pega apenas os 4 primeiros exercícios aleatórios
-    const selecionados = listaFinal
-      .sort(() => 0.5 - Math.random()) // embaralha
-      .slice(0, 4); // limita a 4
-
-    if (selecionados.length > 0) {
-      const grupoDiv = document.createElement("div");
-      grupoDiv.innerHTML = `<h3>${grupo.toUpperCase()}</h3>`;
-
-      selecionados.forEach(ex => {
-        const item = document.createElement("div");
-        item.classList.add("exercicio-item");
-        item.innerHTML = `<p><strong>${ex.exercicio}</strong> (${ex.equipamento})</p>`;
-        item.addEventListener("click", () => mostrarDetalhes(ex));
-        grupoDiv.appendChild(item);
-      });
-
-      container.appendChild(grupoDiv);
-      encontrados += selecionados.length;
-    }
-  });
-
-  if (encontrados === 0) {
-    container.innerHTML = "<p>Nenhum exercício compatível com seu objetivo e equipamentos.</p>";
-  }
-}
-
-// ================================
-// 🔹 MODAL DE ALERTA PERSONALIZADO
-// ================================
-function showCustomAlert(message, onConfirm = null) {
-  const modal = document.getElementById("customAlert");
-  const msg = document.getElementById("customAlertMessage");
-  
-  msg.textContent = message;
-  modal.style.display = "flex";
-
-  // Quando o usuário clicar em "Confirmar"
-  const button = modal.querySelector("button");
-  button.onclick = () => {
-    closeCustomAlert();
-    if (typeof onConfirm === "function") onConfirm();
-  };
-}
-
-function closeCustomAlert() {
-  document.getElementById("customAlert").style.display = "none";
-}
-
-    // ================================
-    // 🔹 DETALHES DO EXERCÍCIO
-    // ================================
-    function mostrarDetalhes(ex) {
-      const { series, repeticoes } = calcularTreino(usuario, ex.foco);
-      container.innerHTML = `
-        <h2>${ex.exercicio}</h2>
-        <p>Equipamento: ${ex.equipamento}</p>
-        <p>Foco: ${ex.foco.join(", ")}</p>
-        <p><strong>${series} séries de ${repeticoes} repetições</strong></p>
-        <button id="btnRealizar">Finali Exercício</button>
-        <button id="btnVoltar">Voltar</button>
-      `;
-
-      document.getElementById("btnRealizar").addEventListener("click", async () => {
-        const registro = {
-          exercicio: ex.exercicio,
-          equipamento: ex.equipamento,
-          series,
-          repeticoes,
-          objetivo: usuario.objetivo,
-          data: new Date().toISOString()
-        };
-
-        const user = auth.currentUser;
-        if (!user) return;
-
-        await db.collection("usuarios").doc(user.uid)
-          .collection("progresso")
-          .add(registro);
-
-        showCustomAlert("✅ Exercício registrado com sucesso!");
-        btnProximo.click();
-      });
-
-      document.getElementById("btnVoltar").addEventListener("click", () => {
-        const ultimo = localStorage.getItem("ultimoTreino");
-        mostrarExercicios(ultimo);
-      });
-    }
-  </script>
 </body>
 </html>
