criação de progresso.html e termos de uso

--- a/paginas/cadastro.html
+++ b/paginas/cadastro.html
@@ -32,7 +32,12 @@
         <span>
           Declaro que estou com minha saúde física em boas condições,
           consultei um(a) médico(a) e estou apto(a) para realizar os treinos orientados aqui.
+        </span><br> <br>
+         <input type="checkbox" id="checkTermos">
+        <span>
+        Aceitar os <a href="termos.html"  style="color: #00aea8; text-decoration: none">termos de uso</a>.
         </span>
+        
       </label><br>
 
       <button onclick="cadastrar()">Cadastrar</button>
