--- a/paginas/progresso.html
+++ b/paginas/progresso.html
@@ -3,54 +3,70 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" type="image/png" href="../assets/logo.png">
-  <link rel="stylesheet" href="style/progresso.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gym Warriors - Progresso</title>
-
-  
+  <link rel="icon" type="image/png" href="../assets/logo.png">
+  <link rel="stylesheet" href="style/progresso.css">
 
   <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+
+  <!-- Chart.js -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body>
-  <div class="container" id="conteudo">
-    <div class="form-box">
-      <h2>Progresso</h2><br>
-      <p>Estamos trabalhando nisso...</p>
-      
-    </div>
-  </div>
+  <main class="container">
+    <h2>Evolução do seu Peso</h2>
 
-<!-- 🟢 Barra de Navegação Inferior -->
-<nav class="tab-bar">
-  <a href="home.html" style="text-decoration: none;" class="tab">
-    <ion-icon name="home-outline"></ion-icon>
-    <span>Home</span>
-  </a>
-  <a href="treinos.html" style="text-decoration: none;" class="tab">
-    <ion-icon name="barbell-outline"></ion-icon>
-    <span>Treinos</span>
-  </a>
-  <a href="progresso.html" style="text-decoration: none;" class="tab active">
-    <ion-icon name="stats-chart-outline"></ion-icon>
-    <span>Progresso</span>
-  </a>
-  <a href="perfil.html" style="text-decoration: none;" class="tab">
-    <ion-icon name="person-outline"></ion-icon>
-    <span>Perfil</span>
-  </a>
-</nav>
+    <div class="grafico-container">
+      <canvas id="graficoPeso"></canvas>
+    </div> <br>
 
-  <!-- Ícones do Ionic -->
+    <section class="dados">
+      <p><strong>Peso inicial:</strong> <span id="pesoInicial">--</span> kg</p>
+      <p><strong>Peso atual:</strong> <span id="pesoAtual">--</span> kg</p>
+      <p><strong>IMC:</strong> <span id="imcValor">--</span> (<span id="imcClass">--</span>)</p>
+    </section> <br>
+
+    <button id="adicionarPesoBtn">Registrar novo peso</button>
+  </main>
+
+  <!-- Barra inferior -->
+  <nav class="tab-bar">
+    <a href="home.html" class="tab"><ion-icon name="home-outline"></ion-icon><span>Home</span></a>
+    <a href="treinos.html" class="tab"><ion-icon name="barbell-outline"></ion-icon><span>Treinos</span></a>
+    <a href="progresso.html" class="tab active"><ion-icon name="stats-chart-outline"></ion-icon><span>Progresso</span></a>
+    <a href="perfil.html" class="tab"><ion-icon name="person-outline"></ion-icon><span>Perfil</span></a>
+  </nav>
+
+  <!-- Ícones Ionic -->
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
-  <script src="scripts/progresso.js" >
-   
-  </script>
+  
+  <!-- ✅ Modal para atualizar peso -->
+  <div id="customAlert" class="modal-alert" style="display: none;">
+    <div class="modal-content">
+      <h3>Atualizar Peso</h3>
+      <input 
+      type="number" 
+      id="inputPeso" 
+      placeholder="Digite seu novo peso (kg)" 
+      required onkeydown="if (event.key === '-' || event.key === 'e' || event.key === 'E') event.preventDefault();"
+      min="0" 
+      max="650" 
+      step="0.1"
+      />
+      <div class="btns">
+        <button id="confirmPesoBtn">Confirmar</button>
+      <button id="cancelPesoBtn">Cancelar</button>
+    </div>
+  </div>
+</div>
+
+<script src="scripts/progresso.js"></script>
 </body>
 </html>
