atualização de progresso incompleta

--- a/paginas/progresso.html
+++ b/paginas/progresso.html
@@ -19,6 +19,9 @@
 
 <body>
   <main class="container">
+
+
+
     <h2>Evolução do seu Peso</h2>
 
     <div class="grafico-container">
@@ -29,7 +32,12 @@
       <p><strong>Peso inicial:</strong> <span id="pesoInicial">--</span> kg</p>
       <p><strong>Peso atual:</strong> <span id="pesoAtual">--</span> kg</p>
       <p><strong>IMC:</strong> <span id="imcValor">--</span> (<span id="imcClass">--</span>)</p>
-    </section> <br>
+    </section> 
+
+     <section class="treinos">
+  <h3>Treinos Realizados</h3>
+  <p id="totalTreinos" class="total-treinos">Carregando...</p>
+</section><br>
 
     <button id="adicionarPesoBtn">Registrar novo peso</button>
   </main>
